# ProActivity_Personalization

./: .gitignore  CODE_REVIEW.md  README.md  _camtest2.py  available_vehicle_models.txt  pyproject.toml  requirements.txt  requirements_prepare.txt  start_experiment.py
data/testdata/: _TESTDATA_README.txt  fcd_levels_TEST.pkl  fcd_out.csv  labeled_data.jsonl  raw_data.jsonl  user_loa_labels.csv
docs/: PERSONALIZATION_NOTES.md  README_DRIVE_CONTROL_MODES.md
scripts/: build_loa_dataset.py  build_statefarm_dataset.py  gpu_deadline_watcher.py  make_test_dataset.py  setup_cuda_torch.py  train_yolo26_series.py  vehicle_state_server.py
src/ProVoice/: README.md  data_collector.py  decision_engine.py  main.py  perception.py  provoice_actuator.py  train_XLSTM.py  train_distraction.py
src/ProVoice/models/: xlstm_model.py
src/ProVoice/webui/: app.py
src/ProVoice/webui/assets/: ws_client.js
src/drive/: __init__.py  drive_improved.py  drive_improvedUE5.py  fixed_npc_traffic.py
wheels/: carla-0.10.0-cp310-cp310-win_amd64.whl
