[project]
name = "ProVoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "carla>=0.10.0",
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "flask>=3.1.2",
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.14",
    "numpy>=1.26.4",
    "huggingface-hub>=0.25.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "pygame>=2.6.1",
    "ultralytics>=8.4.57",
    "keras>=3.12.0",
    "pandas-stubs==2.3.3.251201",
    "joblib>=1.5.2",
    "scikit-learn==1.7.0",
    "mmrphys",
    "pyttsx3>=2.99",
    "asyncio>=4.0.0",
    "fastapi>=0.124.4",
    "python-socketio>=5.15.0",
    "uvicorn>=0.38.0",
    "xgboost>=3.2.0",
]

[tool.uv]
package = true
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[tool.uv.sources]
# NOTE: torch/torchvision are pinned to the CPU index here ONLY so the
# lockfile resolves (the `mmrphys` git dependency pins the same CPU
# index, and uv refuses a mixed-index resolution). For GPU training the
# CUDA 12.8 build (RTX 5080 / Blackwell sm_120) is installed imperatively
# on top via `uv pip install ... --index-url .../whl/cu128` and training
# is launched through the venv Python directly (never `uv run`, which
# would re-sync and revert it). See scripts/setup_cuda_torch.py.
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
carla = [
  { path = "wheels/carla-0.10.0-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.12'" },
]
mmrphys = { git = "https://github.com/LukasWestholt/MMRPhys" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
provoice = "ProVoice:main"
drive = "drive:main"
