[project]
name = "ProVoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "carla>=0.10.0",
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "flask>=3.1.2",
    "matplotlib>=3.10.7",
    # Cap: mediapipe >=0.10.22 has no working Windows cp312 wheel — the
    # published artifact is missing the `mediapipe.python` bindings (no
    # `solutions`), so it imports but is non-functional. 0.10.21 is the last
    # good Windows build. (This also keeps numpy on the 1.x line it requires.)
    "mediapipe>=0.10.14,<0.10.22",
    # mediapipe ships protobuf-generated code built for the protobuf 4.x
    # runtime and does NOT declare the bound itself; protobuf 5/6/7 break
    # `mediapipe.solutions` at runtime. Cap it so resolution stays compatible.
    "protobuf>=4.25.3,<5",
    "numpy>=1.26.4",
    "huggingface-hub>=0.25.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.1",
    "pygame>=2.6.1",
    "ultralytics>=8.4.57",
    "keras>=3.12.0",
    "pandas-stubs>=2.3.3",
    "joblib>=1.5.2",
    # Deliberately pinned: the committed trained_models/*.pkl are sklearn
    # pickles and are version-sensitive (loading across versions can warn or
    # break). Bump this only after retraining those models with the new version.
    "scikit-learn==1.7.0",
    "mmrphys",
    "pyttsx3>=2.99",
    # NOTE: do NOT add `asyncio` here — it is part of the Python standard
    # library; the same-named PyPI package is an abandoned backport that can
    # shadow the stdlib and breaks on modern Python.
    "fastapi>=0.124.4",
    "python-socketio>=5.15.0",
    "uvicorn>=0.38.0",
    "xgboost>=3.2.0",
    # Official nx-ai/xlstm. We use the CPU-only mLSTM `xLSTMBlockStack` path
    # (pure PyTorch). Do NOT import `xlstm.xlstm_large` / `mlstm_kernels`
    # (triton-based, not available on Windows).
    "xlstm==2.0.5",
    "einops",
    "dacite",
    "omegaconf",
]

[tool.uv]
package = true
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[tool.uv.sources]
# NOTE: torch/torchvision are pinned to the CPU index here ONLY so the
# lockfile resolves (the `mmrphys` git dependency pins the same CPU
# index, and uv refuses a mixed-index resolution). For GPU training the
# CUDA 12.8 build (RTX 5080 / Blackwell sm_120) is installed imperatively
# on top via `uv pip install ... --index-url .../whl/cu128` and training
# is launched through the venv Python directly (never `uv run`, which
# would re-sync and revert it). See scripts/setup_cuda_torch.py.
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
carla = [
  { path = "wheels/carla-0.10.0-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.12'" },
]
# Our fork of LukasWestholt/MMRPhys with the torch/torchvision pins loosened to
# >= (also proposed upstream as a PR). Pinned to a specific revision for
# reproducibility; bump `rev` to pull fork updates.
mmrphys = { git = "https://github.com/M-Colley/MMRPhys", rev = "93d3833262646ba8d5a4a3d82f5f85d159677e26" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
provoice = "ProVoice:main"
drive = "drive:main"
